--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epd7x5",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "node module for the 7.5 inch waveshare epaper display",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/williwasser/epd7x5.git"
+    "url": "git+https://github.com/bouvrais/epd7x5.git"
   },
   "keywords": [
     "epaper",
@@ -20,9 +20,9 @@
   "license": "ISC",
   "gypfile": true,
   "bugs": {
-    "url": "https://github.com/williwasser/epd7x5/issues"
+    "url": "https://github.com/bouvrais/epd7x5/issues"
   },
-  "homepage": "https://github.com/williwasser/epd7x5#readme",
+  "homepage": "https://github.com/bouvrais/epd7x5#readme",
   "dependencies": {
     "node-gd": "^1.5.4"
   }
